--- a/apps/client/src/main.css
+++ b/apps/client/src/main.css
@@ -1,6 +1,6 @@
-@import 'https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css';
-@import './style/bulma-slider.min.css';
-@import './style/bulma-switch.min.css';
+@import url('https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css');
+@import url('./style/bulma-slider.min.css');
+@import url('./style/bulma-switch.min.css');
 
 html,
 body,
