--- a/packages/design/variables/src/variables.module.css
+++ b/packages/design/variables/src/variables.module.css
@@ -1,65 +1,79 @@
 :root {
-  --top-height: 60px;
-  --pivot-color-primary: hsl(171deg, 100%, 41%);
-  --pivot-color-primary-light: hsl(171deg, 100%, 51%);
-  --pivot-color-primary-dark: hsl(171deg, 100%, 31%);
-  --pivot-color-primary-contrast: var(--pivot-color-white);
-  --pivot-color-success: hsl(153deg, 53%, 53%);
-  --pivot-color-success-light: hsl(153deg, 53%, 63%);
-  --pivot-color-success-dark: hsl(153deg, 53%, 40%);
-  --pivot-color-success-contrast: var(--pivot-color-white);
-  --pivot-color-warning: hsl(44deg, 100%, 77%);
-  --pivot-color-warning-light: hsl(44deg, 100%, 87%);
-  --pivot-color-warning-dark: hsl(44deg, 100%, 57%);
-  --pivot-color-warning-contrast: var(--pivot-color-white);
-  --pivot-color-danger: hsl(348deg, 86%, 61%);
-  --pivot-color-danger-light: hsl(348deg, 86%, 71%);
-  --pivot-color-danger-dark: hsl(348deg, 86%, 51%);
-  --pivot-color-danger-contrast: var(--pivot-color-white);
-  --pivot-color-info: hsl(207deg, 61%, 53%);
-  --pivot-color-info-light: hsl(207deg, 61%, 63%);
-  --pivot-color-info-dark: hsl(207deg, 61%, 43%);
-  --pivot-color-info-contrast: var(--pivot-color-white);
-  --pivot-color-dark: hsl(0deg, 0%, 20%);
-  --pivot-color-dark-light: hsl(0deg, 0%, 30%);
-  --pivot-color-dark-dark: hsl(0deg, 0%, 10%);
-  --pivot-color-dark-contrast: var(--pivot-color-white);
-  --pivot-color-white: hsl(0deg, 0%, 100%);
-  --pivot-color-gray-10: hsl(0deg, 0%, 90%);
-  --pivot-color-gray-20: hsl(0deg, 0%, 80%);
-  --pivot-color-gray-30: hsl(0deg, 0%, 70%);
-  --pivot-color-gray-40: hsl(0deg, 0%, 60%);
-  --pivot-color-gray-50: hsl(0deg, 0%, 50%);
-  --pivot-color-gray-60: hsl(0deg, 0%, 40%);
-  --pivot-color-gray-70: hsl(0deg, 0%, 30%);
-  --pivot-color-gray-80: hsl(0deg, 0%, 20%);
-  --pivot-color-gray-90: hsl(0deg, 0%, 10%);
-  --pivot-color-gray-100: hsl(0deg, 0%, 0%);
-  --pivot-border-width: 1px;
-  --pivot-border-radius: 4px;
-  --pivot-spacing-0: 0.25rem;
-  --pivot-spacing-1: 0.5rem;
-  --pivot-spacing-2: 1rem;
-  --pivot-spacing-3: 1.5rem;
-  --pivot-spacing-4: 2rem;
-  --pivot-font-size-0: 0.625rem;
-  --pivot-font-size-1: 0.75rem;
-  --pivot-font-size-2: 0.875rem;
-  --pivot-font-size-3: 1rem;
-  --pivot-font-size-4: 1.125rem;
-  --pivot-font-size-5: 1.25rem;
-  --pivot-font-size-6: 1.5rem;
-  --pivot-font-size-7: 2rem;
-  --pivot-font-color: var(--pivot-color-gray-80);
-  --pivot-font-weight-normal: 400;
-  --pivot-font-weight-semibold: 600;
-  --pivot-font-weight-bold: 700;
-  --pivot-animation-duration-0: 0.0875s;
-  --pivot-animation-duration-1: 0.175s;
-  --pivot-animation-duration-2: 0.35s;
-  --pivot-animation-duration-3: 0.7s;
-  --pivot-animation-duration-4: 1.4s;
-  --pivot-avatar-size-0: 2rem;
-  --pivot-avatar-size-1: 2.5rem;
-  --pivot-avatar-size-2: 3rem;
+  /* Utilities */
+  --color-primary: hsl(171deg, 100%, 41%);
+  --color-primary-light: hsl(171deg, 100%, 51%);
+  --color-primary-dark: hsl(171deg, 100%, 31%);
+  --color-primary-contrast: var(--color-white);
+  --color-success: hsl(153deg, 53%, 53%);
+  --color-success-light: hsl(153deg, 53%, 63%);
+  --color-success-dark: hsl(153deg, 53%, 40%);
+  --color-success-contrast: var(--color-white);
+  --color-warning: hsl(44deg, 100%, 77%);
+  --color-warning-light: hsl(44deg, 100%, 87%);
+  --color-warning-dark: hsl(44deg, 100%, 57%);
+  --color-warning-contrast: var(--color-white);
+  --color-danger: hsl(348deg, 86%, 61%);
+  --color-danger-light: hsl(348deg, 86%, 71%);
+  --color-danger-dark: hsl(348deg, 86%, 51%);
+  --color-danger-contrast: var(--color-white);
+  --color-info: hsl(207deg, 61%, 53%);
+  --color-info-light: hsl(207deg, 61%, 63%);
+  --color-info-dark: hsl(207deg, 61%, 43%);
+  --color-info-contrast: var(--color-white);
+  --color-dark: hsl(0deg, 0%, 20%);
+  --color-dark-light: hsl(0deg, 0%, 30%);
+  --color-dark-dark: hsl(0deg, 0%, 10%);
+  --color-dark-contrast: var(--color-white);
+  --color-white: hsl(0deg, 0%, 100%);
+  --color-gray-10: hsl(0deg, 0%, 90%);
+  --color-gray-20: hsl(0deg, 0%, 80%);
+  --color-gray-30: hsl(0deg, 0%, 70%);
+  --color-gray-40: hsl(0deg, 0%, 60%);
+  --color-gray-50: hsl(0deg, 0%, 50%);
+  --color-gray-60: hsl(0deg, 0%, 40%);
+  --color-gray-70: hsl(0deg, 0%, 30%);
+  --color-gray-80: hsl(0deg, 0%, 20%);
+  --color-gray-90: hsl(0deg, 0%, 10%);
+  --color-gray-100: hsl(0deg, 0%, 0%);
+  --border-width: 1px;
+  --border-radius: 4px;
+  --spacing-0: 0.25rem;
+  --spacing-1: 0.5rem;
+  --spacing-2: 1rem;
+  --spacing-3: 1.5rem;
+  --spacing-4: 2rem;
+  --font-size-0: 0.625rem;
+  --font-size-1: 0.75rem;
+  --font-size-2: 0.875rem;
+  --font-size-3: 1rem;
+  --font-size-4: 1.125rem;
+  --font-size-5: 1.25rem;
+  --font-size-6: 1.5rem;
+  --font-size-7: 2rem;
+  --font-color: var(--color-gray-80);
+  --font-weight-normal: 400;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 700;
+  --animation-duration-0: 0.0875s;
+  --animation-duration-1: 0.175s;
+  --animation-duration-2: 0.35s;
+  --animation-duration-3: 0.7s;
+  --animation-duration-4: 1.4s;
+  --avatar-size-0: 2rem;
+  --avatar-size-1: 2.5rem;
+  --avatar-size-2: 3rem;
+
+  /* App */
+  --content-background: var(--white);
+  --content-color: var(--color-gray-80);
+  --header-background: var(--color-gray-90);
+  --header-color: var(--color-white);
+  --header-height: 4rem;
+  --left-nav-width: 200px;
+  --nav-color-dull: var(--color-gray-40);
+  --nav-color-active: var(--color-gray-10);
+  --main-nav-item-color: var(--nav-color-dull);
+  --main-nav-item-hover-color: var(--nav-color-active);
+  --main-nav-item-active-color: var(--nav-color-active);
+  --subheader-height: 3rem;
 }
