--- a/packages/design/css/src/layout/horizontal-left-content.module.css
+++ b/packages/design/css/src/layout/horizontal-left-content.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
-  grid-template-columns: 200px 100px 1fr 200px;
-  grid-template-rows: 70px 50px 1fr;
+  grid-template-columns: var(--left-nav-width) 100px 1fr 200px;
+  grid-template-rows: var(--header-height) var(--subheader-height) 1fr;
   gap: 0 0;
   grid-auto-flow: row;
   /* stylelint-disable-next-line declaration-block-no-redundant-longhand-properties */
