--- a/packages/design/css/src/spaced/spaced.module.css
+++ b/packages/design/css/src/spaced/spaced.module.css
@@ -1,20 +1,20 @@
 .container {
-  --pivot-spaced-gap-default: var(--pivot-spacing-2);
-  --pivot-spaced-gap-small: var(--pivot-spacing-1);
-  --pivot-spaced-gap-large: var(--pivot-spacing-4);
+  --spaced-gap-default: var(--spacing-2);
+  --spaced-gap-small: var(--spacing-1);
+  --spaced-gap-large: var(--spacing-4);
 
   display: inline-flex;
   flex-direction: row;
   align-items: center;
-  gap: var(--pivot-spaced-gap-default);
+  gap: var(--spaced-gap-default);
 }
 
 .container.small {
-  gap: var(--pivot-spaced-gap-small);
+  gap: var(--spaced-gap-small);
 }
 
 .container.large {
-  gap: var(--pivot-spaced-gap-large);
+  gap: var(--spaced-gap-large);
 }
 
 .container.vertical {
