--- a/packages/design/variables/src/variables.module.css
+++ b/packages/design/variables/src/variables.module.css
@@ -25,6 +25,7 @@
   --color-dark-dark: hsl(0deg, 0%, 10%);
   --color-dark-contrast: var(--color-white);
   --color-white: hsl(0deg, 0%, 100%);
+  --color-gray-05: hsl(0deg, 0%, 95%);
   --color-gray-10: hsl(0deg, 0%, 90%);
   --color-gray-20: hsl(0deg, 0%, 80%);
   --color-gray-30: hsl(0deg, 0%, 70%);
@@ -43,6 +44,7 @@
   --spacing-2: 1rem;
   --spacing-3: 1.5rem;
   --spacing-4: 2rem;
+  --spacing-5: 4rem;
   --font-size-0: 0.625rem;
   --font-size-1: 0.75rem;
   --font-size-2: 0.875rem;
@@ -53,6 +55,7 @@
   --font-size-7: 2rem;
   --font-color: var(--color-gray-80);
   --font-weight-normal: 400;
+  --font-weight-quarterbold: 500;
   --font-weight-semibold: 600;
   --font-weight-bold: 700;
   --animation-duration-0: 0.0875s;
@@ -65,19 +68,22 @@
   --avatar-size-2: 3rem;
 
   /* App */
-  --content-background: var(--white);
-  --content-color: var(--color-gray-80);
+  --content-background: var(--color-gray-90);
+  --content-background-highlight: var(--color-gray-85);
+  --content-color: var(--color-gray-10);
   --header-background: var(--color-gray-90);
   --header-color: var(--color-white);
   --header-height: 4rem;
   --left-nav-width: 200px;
   --nav-color-dull: var(--color-gray-40);
+  --nav-color-duller: var(--color-gray-60);
   --nav-color-active: var(--color-gray-10);
   --main-nav-item-color: var(--nav-color-dull);
   --main-nav-item-hover-color: var(--nav-color-active);
   --main-nav-item-active-color: var(--nav-color-active);
-  --page-horizontal-padding: var(--spacing-4);
+  --page-horizontal-padding: var(--spacing-5);
   --subheader-background: var(--color-gray-85);
+  --subheader-border-color: var(--color-gray-70);
   --subheader-color: var(--nav-color-dull);
   --subheader-height: 3rem;
 }
