--- a/packages/design/css/src/skeleton/skeleton.module.css
+++ b/packages/design/css/src/skeleton/skeleton.module.css
@@ -3,7 +3,7 @@
   --skeleton-row-height: var(--font-size-1);
   --skeleton-background-color: var(--color-gray-80);
   --skeleton-background-color-highlighted: var(--color-gray-70);
-  --skeleton-border-radius: var(--border-radius);
+  --skeleton-border-radius: var(--border-radius-1);
   --skeleton-avatar-width: var(cx-avatar-size-1);
   --skeleton-avatar-height: var(cx-avatar-size-1);
   --skeleton-animation-duration: var(--animation-duration-4);
