--- a/packages/design/variables/src/variables.module.css
+++ b/packages/design/variables/src/variables.module.css
@@ -39,7 +39,10 @@
   --color-gray-95: hsl(0deg, 0%, 5%);
   --color-gray-100: hsl(0deg, 0%, 0%);
   --border-width: 1px;
-  --border-radius: 4px;
+  --border-radius-1: 0.25rem;
+  --border-radius-2: 0.5rem;
+  --border-radius-3: 0.75rem;
+  --border-radius-4: 1rem;
   --spacing-0: 0.25rem;
   --spacing-1: 0.5rem;
   --spacing-2: 1rem;
@@ -69,6 +72,9 @@
   --avatar-size-2: 3rem;
 
   /* App */
+  --color-body: var(--color-gray-05);
+  --color-body-dull: var(--color-gray-40);
+  --color-body-duller: var(--color-gray-60);
   --content-background: var(--color-gray-90);
   --content-background-highlight: var(--color-gray-85);
   --content-color: var(--color-gray-10);
