--- a/packages/design/css/src/typography/typography.module.css
+++ b/packages/design/css/src/typography/typography.module.css
@@ -6,3 +6,10 @@
   font-size: 80%;
   color: var(--typography-subtitle-color);
 }
+
+.heading {
+  text-transform: uppercase;
+  font-size: var(--heading-font-size-relative);
+  font-weight: var(--heading-font-weight);
+  color: var(--heading-color);
+}
