--- a/packages/design/variables/src/variables.module.css
+++ b/packages/design/variables/src/variables.module.css
@@ -25,6 +25,9 @@
   --color-dark-dark: hsl(0deg, 0%, 10%);
   --color-dark-contrast: var(--color-white);
   --color-white: hsl(0deg, 0%, 100%);
+  --color-darken-50: rgba(0, 0, 0, 50%);
+  --color-lighten-03: rgba(255, 255, 255, 3%);
+  --color-lighten-15: rgba(255, 255, 255, 15%);
   --color-gray-05: hsl(0deg, 0%, 95%);
   --color-gray-10: hsl(0deg, 0%, 90%);
   --color-gray-20: hsl(0deg, 0%, 80%);
@@ -38,6 +41,7 @@
   --color-gray-90: hsl(0deg, 0%, 10%);
   --color-gray-95: hsl(0deg, 0%, 5%);
   --color-gray-100: hsl(0deg, 0%, 0%);
+  --color-gray-blue-80: hsl(200deg, 14%, 21%);
   --border-width: 1px;
   --border-radius-1: 0.25rem;
   --border-radius-2: 0.5rem;
@@ -72,16 +76,56 @@
   --avatar-size-2: 3rem;
 
   /* App */
+  --card-background-color: var(--color-lighten-03);
+  --card-border-radius: var(--border-radius-1);
+  --card-padding-horizontal: var(--spacing-2);
+  --card-padding-horizontal-small: var(--spacing-1);
+  --card-padding-horizontal-medium: var(--spacing-3);
+  --card-padding-horizontal-large: var(--spacing-4);
+  --card-padding-vertical: var(--spacing-2);
+  --card-padding-vertical-small: var(--spacing-1);
+  --card-padding-vertical-medium: var(--spacing-3);
+  --card-padding-vertical-large: var(--spacing-4);
+  --card-border-width: var(--border-width);
+  --card-border-color: var(--color-lighten-15);
+  --card-padding: var(--border-radius-1);
   --color-body: var(--color-gray-05);
   --color-body-dull: var(--color-gray-40);
   --color-body-duller: var(--color-gray-60);
   --content-background: var(--color-gray-90);
-  --content-background-highlight: var(--color-gray-85);
+  --content-background-highlight: var(--color-gray-blue-80);
   --content-color: var(--color-gray-10);
+  --form-label-margin-bottom: var(--spacing-1);
+  --form-spacing: var(--spacing-3);
   --header-background: var(--color-gray-90);
   --header-color: var(--color-white);
   --header-height: 4rem;
+  --heading-color: var(--color-gray-40);
+  --heading-font-size-relative: 80%;
+  --heading-font-weight: var(--font-weight-semibold);
   --left-nav-width: 200px;
+  --main-nav-item-color: var(--nav-color-dull);
+  --main-nav-item-hover-color: var(--nav-color-active);
+  --main-nav-item-active-color: var(--nav-color-active);
+  --modal-background-color: var(--color-lighten-03);
+  --modal-base-z-index: 1000;
+  --modal-border-color: var(--card-border-color);
+  --modal-border-radius: var(--card-border-radius);
+  --modal-border-width: var(--card-border-width);
+  --modal-footer-height: 70px;
+  --modal-header-height: 70px;
+  --modal-height: calc(100% - 8rem);
+  --modal-overlay-background-color: hsl(0deg, 0%, 10%, 90%);
+  --modal-overlay-background-color-highlight: hsl(200deg, 14%, 21%, 90%);
+  --modal-padding: var(--spacing-2);
+  --modal-padding-small: var(--spacing-1);
+  --modal-padding-medium: var(--spacing-3);
+  --modal-padding-large: var(--spacing-4);
+  --modal-width: 400px;
+  --modal-width-small: 300px;
+  --modal-width-medium: 500px;
+  --modal-width-large: 100%;
+  --modal-margin-large: 4rem;
   --nav-text-color: var(--color-gray-40);
   --nav-icon-color: var(--color-gray-60);
   --nav-text-color-active: var(--color-gray-10);
@@ -89,9 +133,6 @@
   --nav-color-dull: var(--color-gray-40);
   --nav-color-duller: var(--color-gray-60);
   --nav-color-active: var(--color-gray-10);
-  --main-nav-item-color: var(--nav-color-dull);
-  --main-nav-item-hover-color: var(--nav-color-active);
-  --main-nav-item-active-color: var(--nav-color-active);
   --page-horizontal-padding: var(--spacing-5);
   --subheader-background: var(--color-gray-85);
   --subheader-border-color: var(--color-gray-70);
