--- a/packages/design/variables/src/variables.module.css
+++ b/packages/design/variables/src/variables.module.css
@@ -1,12 +1,12 @@
 :root {
   /* Utilities */
-  --color-primary: hsl(171deg, 100%, 41%);
-  --color-primary-light: hsl(171deg, 100%, 51%);
-  --color-primary-dark: hsl(171deg, 100%, 31%);
+  --color-primary: hsl(200deg, 80%, 60%);
+  --color-primary-light: hsl(200deg, 80%, 80%);
+  --color-primary-dark: hsl(200deg, 80%, 40%);
   --color-primary-contrast: var(--color-white);
-  --color-success: hsl(153deg, 53%, 53%);
-  --color-success-light: hsl(153deg, 53%, 63%);
-  --color-success-dark: hsl(153deg, 53%, 40%);
+  --color-success: hsl(147deg, 63%, 36%);
+  --color-success-light: hsl(147deg, 63%, 46%);
+  --color-success-dark: hsl(147deg, 63%, 26%);
   --color-success-contrast: var(--color-white);
   --color-warning: hsl(44deg, 100%, 77%);
   --color-warning-light: hsl(44deg, 100%, 87%);
@@ -25,10 +25,20 @@
   --color-dark-dark: hsl(0deg, 0%, 10%);
   --color-dark-contrast: var(--color-white);
   --color-white: hsl(0deg, 0%, 100%);
+  --color-darken-10: rgba(0, 0, 0, 10%);
   --color-darken-20: rgba(0, 0, 0, 20%);
+  --color-darken-30: rgba(0, 0, 0, 30%);
+  --color-darken-40: rgba(0, 0, 0, 40%);
   --color-darken-50: rgba(0, 0, 0, 50%);
+  --color-darken-70: rgba(0, 0, 0, 70%);
   --color-lighten-03: rgba(255, 255, 255, 3%);
+  --color-lighten-05: rgba(255, 255, 255, 5%);
+  --color-lighten-07: rgba(255, 255, 255, 7%);
   --color-lighten-15: rgba(255, 255, 255, 15%);
+  --color-lighten-20: rgba(255, 255, 255, 20%);
+  --color-lighten-30: rgba(255, 255, 255, 30%);
+  --color-lighten-40: rgba(255, 255, 255, 40%);
+  --color-lighten-60: rgba(255, 255, 255, 60%);
   --color-gray-05: hsl(0deg, 0%, 95%);
   --color-gray-10: hsl(0deg, 0%, 90%);
   --color-gray-20: hsl(0deg, 0%, 80%);
@@ -50,6 +60,7 @@
   --border-radius-4: 1rem;
   --spacing-0: 0.25rem;
   --spacing-1: 0.5rem;
+  --spacing-15: 0.75rem;
   --spacing-2: 1rem;
   --spacing-3: 1.5rem;
   --spacing-4: 2rem;
@@ -75,9 +86,26 @@
   --avatar-size-0: 2rem;
   --avatar-size-1: 2.5rem;
   --avatar-size-2: 3rem;
+  --raised-1: 0 2px 15px 0 var(--color-darken-30);
+  --raised-2: 0 5px 30px 0 var(--color-darken-30);
+  --raised-3: 0 6px 40px 0 var(--color-darken-30);
+  --raised-4: 0 8 50px 0 var(--color-darken-30);
+  --raised-5: 0 10px 60px 0 var(--color-darken-30);
 
   /* App */
+  --button-background-color: var(--color-lighten-05);
+  --button-background-color-hover: var(--color-lighten-07);
+  --button-border-width: 1px;
+  --button-border-color: var(--color-lighten-15);
+  --button-border-radius: var(--border-radius-1);
+  --button-box-shadow: 1px 1px 0 var(--color-darken-10);
+  --button-box-shadow-inset: inset 0 1px 0 var(--color-lighten-03);
+  --button-color: var(--color-gray-10);
+  --button-font-size: var(--font-size-2);
+  --button-font-weight: var(--font-weight-quarterbold);
+  --button-padding: var(--spacing-1) var(--spacing-15);
   --card-background-color: var(--color-gray-85);
+  --card-box-shadow: var(--raised-1);
   --card-border-radius: var(--border-radius-1);
   --card-padding-horizontal: var(--spacing-2);
   --card-padding-horizontal-small: var(--spacing-1);
@@ -91,10 +119,10 @@
   --card-border-color: var(--color-lighten-15);
   --card-padding: var(--border-radius-1);
   --color-body: var(--color-gray-05);
-  --color-body-dull: var(--color-gray-40);
-  --color-body-duller: var(--color-gray-60);
+  --color-body-dull: var(--color-lighten-60);
+  --color-body-duller: var(--color-lighten-40);
   --content-background: var(--color-gray-90);
-  --content-background-highlight: var(--color-gray-blue-80);
+  --content-background-highlight: var(--color-gray-80);
   --content-color: var(--color-gray-10);
   --form-label-margin-bottom: var(--spacing-1);
   --form-spacing: var(--spacing-3);
@@ -113,6 +141,7 @@
   --modal-border-color: var(--card-border-color);
   --modal-border-radius: var(--card-border-radius);
   --modal-border-width: var(--card-border-width);
+  --modal-box-shadow: var(--raised-5);
   --modal-footer-height: 70px;
   --modal-header-height: 70px;
   --modal-height: calc(100% - 4rem);
@@ -122,21 +151,22 @@
   --modal-padding-small: var(--spacing-1);
   --modal-padding-medium: var(--spacing-3);
   --modal-padding-large: var(--spacing-4);
-  --modal-width: 400px;
-  --modal-width-small: 300px;
-  --modal-width-medium: 500px;
+  --modal-width: 700px;
+  --modal-width-small: 500px;
+  --modal-width-medium: 900px;
   --modal-width-large: 100%;
   --modal-margin-large: 2rem;
-  --nav-text-color: var(--color-gray-40);
-  --nav-icon-color: var(--color-gray-60);
-  --nav-text-color-active: var(--color-gray-10);
-  --nav-icon-color-active: var(--color-gray-40);
+  --nav-text-color: var(--color-lighten-40);
+  --nav-icon-color: var(--color-lighten-20);
+  --nav-text-color-active: var(--color-primary);
+  --nav-icon-color-active: var(--color-primary-dark);
   --nav-color-dull: var(--color-gray-40);
   --nav-color-duller: var(--color-gray-60);
   --nav-color-active: var(--color-gray-10);
   --page-horizontal-padding: var(--spacing-5);
   --subheader-background: var(--color-darken-20);
   --subheader-border-color: var(--color-gray-70);
+  --subheader-box-shadow: var(--raised-1);
   --subheader-color: var(--nav-color-dull);
   --subheader-height: 3rem;
 }
