--- a/apps/client/src/ui/entry.css
+++ b/apps/client/src/ui/entry.css
@@ -27,9 +27,10 @@ a:hover {
 .select select,
 .textarea {
   background-color: #333;
-  border-color: #505050;
+  border-color: transparent;
   border-radius: 4px;
   color: #cfcfcf;
+  box-shadow: 1px 1px 2px inset #000000a8, 1px 1px #83838366;
 }
 
 .input:active,
@@ -44,8 +45,10 @@ a:hover {
 .select select:focus,
 .textarea:active,
 .textarea:focus {
-  border-color: #979797;
-  box-shadow: none;
+  border-color: var(--color-success);
+  border-radius: 4px;
+  color: #cfcfcf;
+  box-shadow: 1px 1px 2px inset #000000a8;
 }
 
 input[disabled],
